--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <my-app></my-app>
 </body>
 </html>
+<!-- https://angular.cn/tutorial/toh-pt6#应用的结构与代码 -->
